# mesh-refinement

./: .gitignore  CMakeLists.txt  CMakeSettings.json
algo/: CMakeLists.txt  GRDWriter.cpp  IDW.cpp  IDW.h  MeshReader.cpp  MeshReader.h  MeshWriter.cpp  MeshWriter.h  RefineJudger.cpp  Refiner.cpp  Refiner.h
algo/custom_ops/: xDelaunay2D.cpp  xDelaunay2D.h
algo/interpolaters/: IDW.cpp  IDW.h  IInterpolater.h
algo/io/: GRDReader.cpp  GRDReader.h  GRDWriter.cpp  GRDWriter.h  MeshReader.cpp  MeshWriter.cpp
algo/judgers/: RefineJudger.cpp  RefineJudger.h
algo/optimizers/: AngleOptimizer.cpp  AngleOptimizer.h  ConnectionOptimizer.cpp  ConnectionOptimizer.h
algo/refiners/: DelaunayRefiner.cpp  DelaunayRefiner.h  IRefiner.h  InterpolateRefiner.cpp  InterpolateRefiner.h
data/: dfsu2csv.py  original.mesh  perfect.grd  velocity.txt
tests/: CMakeLists.txt  MeshReaderTests.cpp  RefinerTests.cpp
ui/: CMakeLists.txt  MouseInteractorStyle.cpp  MouseInteractorStyle.h  main.cpp
